--- a/src/main/resources/FXML/Dashboard.fxml
+++ b/src/main/resources/FXML/Dashboard.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="main-container" stylesheets="@../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.netmart.Controllers.DashboardController">
+<AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="main-container" stylesheets="@../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ivent.Controllers.DashboardController">
    <Label layoutX="36.0" layoutY="30.0" styleClass="welcome" text="Welcome, Rafiatu!" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="30.0" />
    <VBox layoutX="30.0" layoutY="62.0" prefHeight="102.0" prefWidth="234.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="80.0">
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
