--- a/src/main/resources/FXML/addGoodModal.fxml
+++ b/src/main/resources/FXML/addGoodModal.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.netmart.Controllers.AddGoods">
+<AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ivent.Controllers.AddGoods">
    <DatePicker fx:id="date" layoutX="455.0" layoutY="60.0" prefHeight="25.0" prefWidth="113.0" />
    <Label layoutX="455.0" layoutY="36.0" text="Date" />
    <ChoiceBox fx:id="category" layoutX="30.0" layoutY="60.0" prefHeight="25.0" prefWidth="150.0" />
