--- a/src/main/resources/FXML/addVendor.fxml
+++ b/src/main/resources/FXML/addVendor.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="500.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.netmart.Controllers.AddVendor">
+<AnchorPane prefHeight="500.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ivent.Controllers.AddVendor">
    <children>
       <VBox layoutX="-1.0" prefHeight="550.0" prefWidth="600.0">
          <children>
