--- a/src/main/resources/FXML/login.fxml
+++ b/src/main/resources/FXML/login.fxml
@@ -12,10 +12,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: light-grey;" stylesheets="@../Styles/login.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.netmart.Controllers.LoginController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: light-grey;" stylesheets="@../Styles/login.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ivent.Controllers.LoginController">
    <VBox prefHeight="400.0" prefWidth="200.0" styleClass="login-logo-container" stylesheets="@../Styles/login.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
       <FontAwesomeIconView glyphName="HOME" size="30" />
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="NetMart">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ivent">
          <font>
             <Font name="Sawasdee Bold" size="13.0" />
          </font>
