--- a/src/main/resources/FXML/viewBills.fxml
+++ b/src/main/resources/FXML/viewBills.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="main-container" stylesheets="@../Styles/Bill.css"
             xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.netmart.Controllers.ViewBillsController">
+            fx:controller="com.example.ivent.Controllers.ViewBillsController">
     <VBox prefHeight="750.0" prefWidth="850.0">
         <AnchorPane prefHeight="750.0" prefWidth="850.0">
             <Label layoutX="44.0" layoutY="36.0" styleClass="view-title" text="VIEW BILLS"/>
