--- a/src/main/resources/FXML/Dashboard.fxml
+++ b/src/main/resources/FXML/Dashboard.fxml
@@ -1,3 +1,5 @@
+//Ethel Akosua Akrasi - 10917233
+
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
